📱 Fixes logo alignment on mobile, added redirect

--- a/components/navbar/_navbar.module.scss
+++ b/components/navbar/_navbar.module.scss
@@ -70,6 +70,7 @@
         display: flex;
         flex-direction: column;
         justify-items: center;
+        align-items: center;
 
         figcaption {
             margin-left: 2rem;
